--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,14 @@
   
       
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=oggE9fw3&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=nUklqMwg'>Farfetch Careers - Principal Data Scientist</a></h5> 
+<p><span class="badge badge-light">Lisbon, Portugal</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=f8f623ba-91b2-4487-931d-cd9014cff694'>Data Science Lead</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -131,7 +139,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
+<h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
       Praktikant/Werkstudent Data Science/Machine Learning (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
@@ -163,7 +171,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Los Angeles  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://idalab.softgarden.io/job/3786012/Junior-Data-Scientist-Working-Student-m-f-d-?jobDbPVId=14406378&amp;l=en'>Junior Data Scientist (Working Student m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/3786012/Junior-Data-Scientist-Working-Student-m-f-d-?jobDbPVId=14406378&amp;l=en'>Junior Data Scientist (Working Student m/f/d)</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -203,7 +211,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">New York, NY  NYC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698556175-bcai-data-scientist'>Bosch Group BCAI_Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698556175-bcai-data-scientist'>Bosch Group BCAI_Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -269,7 +277,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Hillsboro, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://lana-labs.join.com/jobs/469684-teamlead-data-science-und-consulting-f-m-d'>Job @ Lana Labs (Berlin): Teamlead Data Science & ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lana-labs.join.com/jobs/469684-teamlead-data-science-und-consulting-f-m-d'>Job @ Lana Labs (Berlin): Teamlead Data Science & ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -322,11 +330,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.jobsearch.ie/jobs/146502_head_of_data_science_jobs.html'>Head of Data Science job. Jobs on Jobsearch.ie</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobsearch.ie/jobs/146502_head_of_data_science_jobs.html'>Head of Data Science job. Jobs on Jobsearch.ie</a></h5> 
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/JobDetails.aspx?site=1&id=989'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/JobDetails.aspx?site=1&id=989'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -473,14 +481,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Santa Clara, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/netflix/2089030b-b32c-491d-9dfd-6685fb3f620c'>Netflix - Senior Data Scientist, Growth Marketing</a></h5> 
-<p><span class="badge badge-light">California</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
