--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,8 +71,12 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/pg5fcyjw9xtwomprg4pcypioiy'>Data Analyst | Manifest Solutions</a></h5> 
+<p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://experian.referrals.selectminds.com/jobs/bureau-data-quality-analyst-14091'>Bureau Data Quality Analyst - Experian Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://kier.referrals.selectminds.com/jobs/data-analyst-engineer-8960'>Data Analyst- Engineer - Kier Group Plc Careers</a></h5> 
@@ -171,7 +175,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -295,7 +299,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -379,7 +383,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -481,10 +485,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
